[gd_scene load_steps=25 format=3 uid="uid://caiaj482qonl2"]

[ext_resource type="Script" path="res://main.gd" id="1_3yc8h"]
[ext_resource type="Texture2D" uid="uid://mnrjfu41axvo" path="res://stars/textures/flare_white.png" id="2_btkb5"]
[ext_resource type="Texture2D" uid="uid://tu51wfur5kq7" path="res://stars/textures/galaxy.jpg" id="3_fd031"]
[ext_resource type="PackedScene" uid="uid://xqotvd7qfgow" path="res://stars/star_class_generic.tscn" id="5_b0o3s"]
[ext_resource type="QuadMesh" path="res://stars/fluff_mesh.tres" id="5_hvyhb"]
[ext_resource type="Script" path="res://stars/fluff.gd" id="6_sa3n7"]
[ext_resource type="Script" path="res://stars/star_manager.gd" id="7_wiqtr"]
[ext_resource type="QuadMesh" path="res://stars/star_mesh.tres" id="8_bqfh2"]
[ext_resource type="Script" path="res://stars/edsm_query.gd" id="9_46akg"]
[ext_resource type="Script" path="res://ui/ui_eddn_event.gd" id="10_b786m"]
[ext_resource type="Script" path="res://ui/fps.gd" id="11_klw85"]
[ext_resource type="Script" path="res://ui/star_count.gd" id="12_jqahg"]
[ext_resource type="Script" path="res://ui/camera_position.gd" id="13_rfmsg"]
[ext_resource type="Script" path="res://ws/json_web_socket_receiver.gd" id="14_p83qc"]
[ext_resource type="Script" path="res://ws/eddn_receiver.gd" id="15_b7ifv"]
[ext_resource type="Script" path="res://ws/nav_route.gd" id="16_x3ei5"]
[ext_resource type="Script" path="res://ws/generic_event.gd" id="17_wb623"]

[sub_resource type="Environment" id="Environment_xftdg"]
background_mode = 1
glow_enabled = true
glow_intensity = 1.0
glow_bloom = 0.7
glow_blend_mode = 0
fog_light_color = Color(0.392157, 0.392157, 0.392157, 1)
fog_density = 0.0025
fog_sky_affect = 0.0
volumetric_fog_sky_affect = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nkkv3"]
transparency = 1
blend_mode = 1
cull_mode = 2
depth_draw_mode = 2
shading_mode = 0
disable_ambient_light = true
albedo_color = Color(1, 1, 1, 0.0117647)
albedo_texture = ExtResource("3_fd031")
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_bnbkk"]
material = SubResource("StandardMaterial3D_nkkv3")
size = Vector2(104000, 104000)

[sub_resource type="MultiMesh" id="MultiMesh_g54w7"]
transform_format = 1
use_colors = true
mesh = ExtResource("5_hvyhb")

[sub_resource type="MultiMesh" id="MultiMesh_qnluk"]
transform_format = 1
use_colors = true
mesh = ExtResource("8_bqfh2")

[sub_resource type="SystemFont" id="SystemFont_m3hyb"]
font_names = PackedStringArray("Lucida Console", "Monospace")

[sub_resource type="Theme" id="Theme_y7a2b"]
default_font = SubResource("SystemFont_m3hyb")

[node name="Main" type="Node3D"]
script = ExtResource("1_3yc8h")
idle_move_seed = 24

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(-0.939693, -0.196175, 0.280167, 0, 0.819152, 0.573577, -0.34202, 0.538985, -0.769751, 4000, 4000, -4000)
fov = 85.0
far = 100000.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xftdg")

[node name="Map" type="Node3D" parent="."]

[node name="Galaxy" type="MeshInstance3D" parent="Map"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -25, -21, 25900)
mesh = SubResource("PlaneMesh_bnbkk")

[node name="Center" parent="Map/Galaxy" instance=ExtResource("5_b0o3s")]
pixel_size = 0.2
texture = ExtResource("2_btkb5")

[node name="Fluff" type="MultiMeshInstance3D" parent="Map/Galaxy"]
multimesh = SubResource("MultiMesh_g54w7")
script = ExtResource("6_sa3n7")

[node name="StarManager" type="Node" parent="Map"]
script = ExtResource("7_wiqtr")
distance_factor = 1200.0

[node name="FrozenStars" type="MultiMeshInstance3D" parent="Map/StarManager"]
multimesh = SubResource("MultiMesh_qnluk")

[node name="ExpireTimer" type="Timer" parent="Map/StarManager"]
wait_time = 35.0
autostart = true

[node name="DeleteTimer" type="Timer" parent="Map/StarManager"]
wait_time = 80.0
autostart = true

[node name="FreezeTimer" type="Timer" parent="Map/StarManager"]
wait_time = 340.0
autostart = true

[node name="EDSMQuery" type="Node" parent="Map"]
script = ExtResource("9_46akg")
radius = 30
min_radius = 24
expire = 65

[node name="UI" type="CanvasLayer" parent="."]

[node name="UI_EDDNEvent" type="VBoxContainer" parent="UI"]
offset_right = 1.0
offset_bottom = 54.0
theme = SubResource("Theme_y7a2b")
script = ExtResource("10_b786m")

[node name="Timestamp" type="Label" parent="UI/UI_EDDNEvent"]
layout_mode = 2

[node name="Type" type="Label" parent="UI/UI_EDDNEvent"]
layout_mode = 2

[node name="SystemName" type="Label" parent="UI/UI_EDDNEvent"]
layout_mode = 2

[node name="Position" type="Label" parent="UI/UI_EDDNEvent"]
layout_mode = 2

[node name="FPS" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("11_klw85")

[node name="StarCount" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
script = ExtResource("12_jqahg")

[node name="CameraPosition" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
script = ExtResource("13_rfmsg")

[node name="Receiver" type="Node" parent="."]

[node name="JSONWebSocketReceiver" type="Node" parent="Receiver"]
script = ExtResource("14_p83qc")

[node name="EDDNReceiver" type="Node" parent="Receiver"]
script = ExtResource("15_b7ifv")
cut_off = 60
clock_fudge = 2

[node name="NavRoute" type="Node" parent="Receiver/EDDNReceiver"]
script = ExtResource("16_x3ei5")
expire = 300

[node name="GenericEvent" type="Node" parent="Receiver/EDDNReceiver"]
script = ExtResource("17_wb623")
expire = 3600

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 55.0
autostart = true

[connection signal="counter" from="Map/StarManager" to="UI/StarCount" method="_on_star_manager_counter"]
[connection signal="timeout" from="Map/StarManager/ExpireTimer" to="Map/StarManager" method="_on_expire_timer_timeout"]
[connection signal="timeout" from="Map/StarManager/DeleteTimer" to="Map/StarManager" method="_on_delete_timer_timeout"]
[connection signal="timeout" from="Map/StarManager/FreezeTimer" to="Map/StarManager" method="_on_freeze_timer_timeout"]
[connection signal="disconnected" from="Receiver/JSONWebSocketReceiver" to="UI/UI_EDDNEvent" method="_on_json_web_socket_receiver_disconnected"]
[connection signal="received" from="Receiver/JSONWebSocketReceiver" to="Receiver/EDDNReceiver" method="_on_json_web_socket_receiver_received"]
[connection signal="received" from="Receiver/EDDNReceiver" to="UI/UI_EDDNEvent" method="_on_eddn_receiver_received"]
[connection signal="received" from="Receiver/EDDNReceiver" to="Receiver/EDDNReceiver/NavRoute" method="_on_eddn_receiver_received"]
[connection signal="received" from="Receiver/EDDNReceiver" to="Receiver/EDDNReceiver/GenericEvent" method="_on_eddn_receiver_received"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
